--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
     margin: 0px;
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
-.nav{
+
+.nav {
     background-color: #DC303B;
     display: flex;
     flex-direction: row;
@@ -14,37 +16,80 @@
     width: 100%;
     top: 0;
 }
-.nav .left{
+
+.nav .left {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 8px;
 }
-.nav .right{
+
+.nav .right {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 5px;
 }
-.right img{
-    border-radius: 100%; 
+
+.right img {
+    border-radius: 100%;
     aspect-ratio: 1/1;
     object-fit: contain;
 }
-.nav .right i{
+
+.nav .right i {
     margin-right: 15px;
     font-size: 30px;
 }
-.nav .left i{
+
+.nav .left i {
     margin-right: 15px;
     font-size: 30px;
     position: absolute;
     left: 199px;
     font-size: 23px;
 }
-.left input{
+
+.left input {
     padding: 7px 15px;
     border-radius: 12px;
     border: none;
     margin-left: 10px;
+}
+
+.info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.info img {
+    margin: 70px;
+    border-radius: 100%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    width: 170px;
+}
+
+.info .detail {
+    margin: 70px;
+}
+
+.nav_post {
+    border-bottom: 1px solid gray;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    height: 55px;
+}
+
+.nav_post a {
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
+}
+.nav_post .line{
+    border-right: 1px solid gray;
+    padding: 16px 0px;
 }
