--- a/Static/member/sing in.ejs
+++ b/Static/member/sing in.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing up</title>
-    <link rel="stylesheet" href="sing in.css">
+    <link rel="stylesheet" href="../css/sing in.css">
 </head>
 
 <body>
@@ -18,8 +18,7 @@
 
         <div class="right">
             <h2>Sing in</h2>
-            <form action="#">
-
+            <form action="/home">
                 <label for="Age">Email</label>
                 <input type="email" id="email" name="email" placeholder=" Enter email">
                 <label for="distance">Password</label>
