--- a/Static/css/home.css
+++ b/Static/css/home.css
@@ -136,6 +136,14 @@
     flex-direction: column;
 }
 
+.create .postbutton {
+    padding: 3px 10px 3px 10px;
+    border: 1px solid grey;
+    width: 540px;
+    margin-bottom: 5px;
+    border-radius: 20px;
+}
+
 .create .add {
     display: flex;
     flex-direction: row;
@@ -267,7 +275,7 @@
     background-color: rgba(0, 0, 0, 0.651);
     width: 100vw;
     height: 100vh;
-    z-index: 10;
+    z-index: 15;
     align-items: center;
     justify-content: center;
 }
@@ -418,6 +426,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
 
 .float-chat-user .bottom {
@@ -454,3 +463,9 @@
     right: 35px;
     font-size: 20px;
 }
+.infoooo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
