--- a/Static/css/profile.css
+++ b/Static/css/profile.css
@@ -65,7 +65,6 @@
 }
 
 .info img {
-    margin: 70px;
     border-radius: 100%;
     aspect-ratio: 1/1;
     object-fit: contain;
@@ -92,4 +91,213 @@
 .nav_post .line{
     border-right: 1px solid gray;
     padding: 16px 0px;
+}
+
+.chat-pop-up {
+    z-index: 3;
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    /* เปลี่ยนจาก absolute เป็น fixed */
+    top: 80px;
+    right: 20px;
+    /* แสดงให้ชิดขวาของหน้าจอ */
+    background-color: rgb(151, 151, 151);
+    width: 250px;
+    height: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#chat-profile {
+    margin-right: 5px;
+    width: 40px;
+    border-radius: 100%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+}
+
+.chat {
+    padding: 7px;
+    border-bottom: 2px solid black;
+    display: flex;
+    align-items: center;
+}
+
+.chat:hover {
+    background-color: rgb(132, 132, 132);
+}
+
+.float-chat-user {
+    background-color: white;
+    height: auto;
+    width: 250px;
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    z-index: 11;
+    top: 80px;
+    right: 290px;
+    border: 1px solid black;
+}
+
+.float-chat-user .top {
+    padding: 5px 7px;
+    background-color: #b83039;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.float-chat-user .bottom {
+    padding: 10px 20px;
+}
+
+.float-chat-user .chat-text {
+    overflow-y: auto;
+    height: 300px;
+}
+
+.split a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+.send-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 5px;
+}
+
+.send-text input {
+    width: 100%;
+    height: 20px;
+    border-radius: 20px;
+    padding: 0px 30px 0px 10px;
+}
+
+.send-text i {
+    position: absolute;
+    right: 35px;
+    font-size: 20px;
+}
+.infoooo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 50px;
+}
+
+.float-chat {
+    position: fixed;
+    display: flex;
+    z-index: 10;
+    align-items: center;
+    background-color: #DC303B;
+    padding: 20px;
+    border-radius: 50%;
+    bottom: 20px;
+    right: 20px;
+}
+
+.float-chat i {
+    font-size: 24px;
+}
+
+.float-chat:hover {
+    background-color: #b83039;
+}
+
+.user_post {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    border: 1px solid black;
+    border-radius: 15px;
+    margin: 15px;
+}
+
+.posts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.posts i {
+    margin: 5px;
+    color: black;
+    font-size: 20px;
+}
+
+.user_post img {
+    object-fit: contain;
+}
+
+.pros img {
+    border-radius: 100%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    width: 45px;
+    margin: 8px;
+}
+
+.user_post p {
+    font-size: 15px;
+}
+
+.pros {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.title {
+    font-size: 19px;
+    padding: 8px;
+    margin-bottom: 10px;
+}
+
+.badmi {
+    border-radius: 100%;
+}
+
+.badmi img {
+    width: 100%;
+}
+
+.icon {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.icon a {
+    display: flex;
+    align-items: center;
+    color: black;
+    text-decoration: none;
+}
+
+.icon a i {
+    margin: 5px;
+}
+
+.postt{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.badmi {
+    display: flex;
+    min-width: 840px;
+    max-width: 840px;
+    align-items: center;
+    justify-content: center;
 }
