--- a/Static/css/home.css
+++ b/Static/css/home.css
@@ -273,11 +273,12 @@
     position: absolute;
     display: none;
     background-color: rgba(0, 0, 0, 0.651);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 15;
     align-items: center;
     justify-content: center;
+    position: fixed;
 }
 
 .pop-up {
