--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -39,7 +39,7 @@
         <div class="top">
             <div class="infoooo">
                 <div class="info">
-                    <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+                   <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
                 </div>
                 <span>Friend 1</span>
             </div>
@@ -106,7 +106,7 @@
             <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
-            <a href="profile.html"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
+            <a href="/profile"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
         </div>
     </div>
 
