--- a/Static/member/past-activities.ejs
+++ b/Static/member/past-activities.ejs
@@ -90,9 +90,9 @@
     </div>
 
     <div class="nav_post">
-        <a style="font-weight: bold;" href="">Activity room</a>
+        <a href="/atvt">Activity room</a>
         <div class="line"></div>
-        <a href="past-activities.html">Past activity room</a>
+        <a style="font-weight: bold;" href="/past_atvt">Past activity room</a>
     </div>
 
     <div class="postt">
@@ -107,10 +107,10 @@
                 </div>
             </div>
             <div class="title">
-                <p>หาเพื่อนตีแบตครับ😥 #แบดมินตัน เวลานัด 17.00</p>
+                <p>หาเพื่อนเล่นบอลครับ😥 #บอล เวลานัด 12.00</p>
             </div>
             <div class="badmi">
-                <img src="../IMG/badminton.webp">
+                <img src="../IMG/football-1396740_1280.jpg">
             </div>
             <div class="icon">
                 <a href=""><i class='bx bxs-heart'></i>Interested</a>
@@ -118,30 +118,7 @@
                 <a href=""><i class='bx bx-group'></i>Join</a>
                 <a href=""><i class='bx bxs-share'></i>Share</a>
             </div>
-        </div>
-        <div class="user_post">
-            <div class="posts">
-                <div class="pros">
-                    <img src="../IMG/Untitled.png">
-                    <p>Somchai_UP</p>
-                </div>
-                <div>
-                    <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
-                </div>
-            </div>
-            <div class="title">
-                <p>หาเพื่อนเล่นบาสครับ😥 #แบดมินตัน เวลานัด 14.00</p>
-            </div>
-            <div class="badmi">
-                <img src="../IMG/Basketball-Court-Mahasarakham-University.jpg">
-            </div>
-            <div class="icon">
-                <a href=""><i class='bx bxs-heart'></i>Interested</a>
-                <a href=""><i class='bx bxs-comment-detail'></i>Comment</a>
-                <a href=""><i class='bx bx-group'></i>Join</a>
-                <a href=""><i class='bx bxs-share'></i>Share</a>
-            </div>
-        </div>
+        </div>  
     </div>
 </body>
 
