--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -73,7 +73,7 @@
             <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
-            <a href="profile.html"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
+            <a href="#"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
         </div>
     </div>
 
@@ -90,9 +90,9 @@
     </div>
 
     <div class="nav_post">
-        <a href="profile.html">Activity room</a>
+        <a style="font-weight: bold;" href="/atvt">Activity room</a>
         <div class="line"></div>
-        <a style="font-weight: bold;" href="">Past activity room</a>
+        <a href="/past_atvt">Past activity room</a>
     </div>
 
     <div class="postt">
@@ -107,10 +107,10 @@
                 </div>
             </div>
             <div class="title">
-                <p>หาเพื่อนเล่นบอลครับ😥 #บอล เวลานัด 12.00</p>
+                <p>หาเพื่อนตีแบตครับ😥 #แบดมินตัน เวลานัด 17.00</p>
             </div>
             <div class="badmi">
-                <img src="../IMG/football-1396740_1280.jpg">
+                <img src="../IMG/badminton.webp">
             </div>
             <div class="icon">
                 <a href=""><i class='bx bxs-heart'></i>Interested</a>
@@ -118,7 +118,30 @@
                 <a href=""><i class='bx bx-group'></i>Join</a>
                 <a href=""><i class='bx bxs-share'></i>Share</a>
             </div>
-        </div>  
+        </div>
+        <div class="user_post">
+            <div class="posts">
+                <div class="pros">
+                    <img src="../IMG/Untitled.png">
+                    <p>Somchai_UP</p>
+                </div>
+                <div>
+                    <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
+                </div>
+            </div>
+            <div class="title">
+                <p>หาเพื่อนเล่นบาสครับ😥 #แบดมินตัน เวลานัด 14.00</p>
+            </div>
+            <div class="badmi">
+                <img src="../IMG/Basketball-Court-Mahasarakham-University.jpg">
+            </div>
+            <div class="icon">
+                <a href=""><i class='bx bxs-heart'></i>Interested</a>
+                <a href=""><i class='bx bxs-comment-detail'></i>Comment</a>
+                <a href=""><i class='bx bx-group'></i>Join</a>
+                <a href=""><i class='bx bxs-share'></i>Share</a>
+            </div>
+        </div>
     </div>
 </body>
 
