--- a/Static/member/welcome.ejs
+++ b/Static/member/welcome.ejs
@@ -24,8 +24,12 @@
                     <p>FIND NEW <br> EXERCIS <br> FINEDNS NOW</p>
 
                     <div class="lot">
-                        <button onclick="location.href='sing up1.html'" type="button">Sing up</button>
-                        <button onclick="location.href='sing in.html'" type="button button2">Sing in</button>
+                        <form action="/sing-up1">
+                            <button type="submit">Sing up</button>
+                        </form>
+                        <form action="/sing-in">
+                            <button type="submit">Sing in</button>
+                        </form>
                     </div>
                 </div>
             </div>
