--- a/Static/member/sing_up2.ejs
+++ b/Static/member/sing_up2.ejs
@@ -19,7 +19,7 @@
         <div class="right">
             <h2>Sing up</h2>
 
-            <form action="/login">
+            <form action="/sing-in">
                 <label>Gender</label><br>
                 <div class="box" id="yy">
                     <label>
