--- a/Static/member/welcome.ejs
+++ b/Static/member/welcome.ejs
@@ -24,10 +24,10 @@
                     <p>FIND NEW <br> EXERCIS <br> FINEDNS NOW</p>
 
                     <div class="lot">
-                        <form action="/sing-up1">
+                        <form action="/singup1">
                             <button type="submit">Sing up</button>
                         </form>
-                        <form action="/sing-in">
+                        <form action="/singin">
                             <button type="submit">Sing in</button>
                         </form>
                     </div>
