--- a/Static/css/welcome.css
+++ b/Static/css/welcome.css
@@ -62,6 +62,10 @@
     flex-wrap: wrap;
     flex-direction: column;
 }
+
+.lot {
+    display: flex;
+}
 .lot button {
     padding: 10px 40px;
     border-radius: 20px;
