--- a/Static/member/post.ejs
+++ b/Static/member/post.ejs
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Post an Image</h1>
-    <form id="uploadForm" action="/member/upload-blob" method="POST" enctype="multipart/form-data">
+    <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
       <label for="image">Choose an Image</label>
       <input type="file" id="image" name="image" accept="image/*" required>
       <label for="caption">Caption</label>
