--- a/Static/member/sing_in.ejs
+++ b/Static/member/sing_in.ejs
@@ -19,7 +19,7 @@
 
         <div class="right">
             <h2>Sing in</h2>
-            <form action="/home">
+            <form action="user/verify" method="post">
                 <label for="Age">Email</label>
                 <input type="email" id="email" name="email" placeholder=" Enter email" required>
                 <label for="distance">Password</label>
@@ -29,6 +29,7 @@
                 <div class="qe">
                     <button type="submit" onclick="login()" >Sing in</button>
                 </div>
+                <%=locals?.msg?msg:""%>
             </form>
         </div>
     </div>
