--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -108,7 +108,12 @@
             <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
-            <a href="/profile"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
+            <form action="user/profile" method="get">
+                <button type="submit" style="border: none; background: none; padding: 0; cursor: pointer;">
+                    <img style="width: 40px;" src="../IMG/Untitled.png">
+                </button>
+            </form>
+            
         </div>
     </div>
 
