--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -82,10 +82,10 @@
             <img src="../IMG/Untitled.png">
         </div>
         <div class="detail">
-            <h1>Somchai_UP</h1><br>
-            <p>Garder: Male, age 20</p>
-            <p>Interested sports: football, badminton.</p><br>
-            <p>2 friends</p>
+            <h1><%= username %></h1><br>
+            <p>Garder: <%= userData.gender %>, age <%= userData.age %></p>
+            <p>Interested sports: <%= userData.Interested %> </p><br>
+            <!-- <p>2 friends</p> -->
         </div>
     </div>
 
