--- a/Static/member/profile.ejs
+++ b/Static/member/profile.ejs
@@ -63,9 +63,9 @@
 
     <div class="nav">
         <div class="left">
-            <a href="">
-                <a href="home.html"><img style="width: 40px;" src="../IMG/Logo2.png"></a>
-            </a>
+            
+            <a href="/home"><img style="width: 40px;" src="../IMG/Logo2.png"></a>
+            
             <input type="text" placeholder="search">
             <i class='bx bx-search'></i>
         </div>
