--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -136,58 +136,61 @@
                 </div>
 
             </div>
-            <div class="all-post">
-                <h2>Debug: จำนวนโพสต์ที่ได้รับ = <%= typeof posts !== 'undefined' ? posts.length : 0 %></h2> <!-- Debug -->
             
-                <% if (posts && posts.length > 0) { %>
-                    <% posts.forEach(function(post) { %>
-                        <div class="post">
-                            <% if (post.avatar) { %>
-                                <h3>Your Avatar</h3>
-                                <img src="data:image/png;base64,<%= post.avatar %>" alt="User Avatar" style="width: 100px; height: 100px; border-radius: 50%;">
-                            <% } else { %>
-                                <img style="width: 50px;" src="../IMG/Untitled.png">
-                            <% } %>
-
-                            <h3>โพสต์โดย: <a href="/profile/<%= post.memberName %>"><%= post.memberName %></a></h3>
-                            <p><%= post.capion %></p> <!-- ข้อความโพสต์ -->
-                            <p><%= post.time %></p> <!-- เวลาที่โพสต์ -->
-
-                            
-                            <% if (post.img) { %>
-                                <img src="data:image/jpeg;base64,<%= post.img %>" alt="รูปภาพโพสต์">
-                            <% } %>
-                        </div>
+            <div class="all-post">
+                <% if (groupedPosts && Object.keys(groupedPosts).length > 0) { %>
+                    <% Object.keys(groupedPosts).forEach(userID => { %>
+                        <% groupedPosts[userID].posts.forEach(post => { %> 
+                            <div class="user_post"> <!-- 🔹 กรอบโพสต์แต่ละโพสต์ -->
+                                <div class="posts">
+                                    <div class="pros">
+                                        <% if (groupedPosts[userID].avatar) { %>
+                                            <img src="data:image/png;base64,<%= groupedPosts[userID].avatar %>" alt="User Avatar" style="width: 50px; height: 50px; border-radius: 50%;">
+                                        <% } else { %>
+                                            <img style="width: 50px;" src="../IMG/Untitled.png">
+                                        <% } %>
+                                        <p><a href="/profile/<%= groupedPosts[userID].username %>"><%= groupedPosts[userID].username %></a></p>
+                                    </div>
+                                    <div>
+                                        <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
+                                    </div>
+                                </div>
+            
+                                <!-- 🔹 กรอบสำหรับโพสต์แต่ละโพสต์ -->
+                                <div class="title">
+                                    <p><%= post.capion %></p> 
+                                    <p><%= post.time %></p>
+                                </div>
+                                <div class="badmi">
+                                    <% if (post.img) { %>
+                                        <img src="data:image/jpeg;base64,<%= post.img %>" alt="รูปภาพโพสต์" style="width: 100%; border-radius: 10px;">
+                                    <% } %>
+                                </div>
+                                <div class="icon">
+                                    <a href=""><i class='bx bxs-heart'></i> Interested</a>
+                                    <a href=""><i class='bx bxs-comment-detail'></i> Comment</a>
+            
+                                    <!-- ฟอร์มที่ซ่อนปุ่มไว้ -->
+                                    <form id="joinForm-<%= post.postID %>" action="/join" method="POST">
+                                        <input type="hidden" name="postID" value="<%= post.postID %>">
+                                        <input type="hidden" name="ownerID" value="<%= post.ownerID %>">
+                                    </form>
+                                    <!-- ลิงก์ <a> กดแล้วส่งฟอร์ม -->
+                                    <a href="#" onclick="document.getElementById('joinForm-<%= post.postID %>').submit(); return false;">
+                                        <i class='bx bx-group'></i> Join
+                                    </a>
+            
+                                    <a href=""><i class='bx bxs-share'></i> Share</a>
+                                </div>
+                            </div>
+                        <% }); %>
                     <% }); %>
                 <% } else { %>
                     <p>⚠️ ไม่มีโพสต์</p>
                 <% } %>
             </div>
             
-
-            <div class="user_post">
-                <div class="posts">
-                    <div class="pros">
-                        <img src="../IMG/Untitled.png">
-                        <p>Somchai_UP</p>
-                    </div>
-                    <div>
-                        <a href="#"><i class='bx bx-dots-vertical-rounded'></i></a>
-                    </div>
-                </div>
-                <div class="title">
-                    <p>หาเพื่อนตีแบตค่ะ😥 #แบดมินตัน เวลานัด 17.00</p>
-                </div>
-                <div class="badmi">
-                    <img src="../IMG/badminton.webp">
-                </div>
-                <div class="icon">
-                    <a href=""><i class='bx bxs-heart'></i>Interested</a>
-                    <a href=""><i class='bx bxs-comment-detail'></i>Comment</a>
-                    <a href=""><i class='bx bx-group'></i>Join</a>
-                    <a href=""><i class='bx bxs-share'></i>Share</a>
-                </div>
-            </div>
+            
             
         </div>
         <div class="tag">
