--- a/Static/member/home.ejs
+++ b/Static/member/home.ejs
@@ -39,7 +39,11 @@
         <div class="top">
             <div class="infoooo">
                 <div class="info">
-                   <a href="#"><img id="chat-profile" src="../IMG/Untitled.png" alt=""></a>
+                    <% if (userAvatar) { %>
+                        <img src="data:image/png;base64,<%= userAvatar %>" alt="Your Avatar" style="width: 60px; height: 60px; border-radius: 50%;">
+                    <% } else { %>
+                        <img style="width: 50px; height: 50px; border-radius: 50%;" src="../IMG/Untitled.png">
+                    <% } %>
                 </div>
                 <span>Friend 1</span>
             </div>
@@ -69,7 +73,11 @@
             <form id="usrp" class="user_post_form" action="/user/create_post" method="post" enctype="multipart/form-data">
                 <div class="user_profile_">
                     <div class="left">
-                        <img id="profile" src="../IMG/Untitled.png" alt="">
+                        <% if (userAvatar) { %>
+                            <img src="data:image/png;base64,<%= userAvatar %>" alt="Your Avatar" style="width: 60px; height: 60px; border-radius: 50%;">
+                        <% } else { %>
+                            <img style="width: 50px; height: 50px; border-radius: 50%;" src="../IMG/Untitled.png">
+                        <% } %>
                         <a href=""><%= username %></a>
                     </div>
 
@@ -109,7 +117,12 @@
             <a href="home.html"><i class='bx bx-home' style='color:#fffcfc'></i></a>
             <!-- <i class='bx bx-bell' style='color:#fffcfc'></i> -->
             <i id="chat" class='bx bx-chat' style='color:#fffcfc'></i>
-            <a href="/profile"><img style="width: 40px;" src="../IMG/Untitled.png"></a>
+            <a href="/profile"><% if (userAvatar) { %>
+                <img src="data:image/png;base64,<%= userAvatar %>" alt="Your Avatar" style="width: 60px; height: 60px; border-radius: 50%;">
+            <% } else { %>
+                <img style="width: 50px; height: 50px; border-radius: 50%;" src="../IMG/Untitled.png">
+            <% } %>
+            </a>
         </div>
     </div>
 
@@ -125,7 +138,11 @@
         </div>
         <div class="all_post">
             <div class="post">
-                <img id="profile" src="../IMG/Untitled.png">
+                <% if (userAvatar) { %>
+                    <img src="data:image/png;base64,<%= userAvatar %>" alt="Your Avatar" style="width: 60px; height: 60px; border-radius: 50%;">
+                <% } else { %>
+                    <img style="width: 50px; height: 50px; border-radius: 50%;" src="../IMG/Untitled.png">
+                <% } %>
                 <div class="create">
                     <a class="postbutton" id="postbutton">Create your event</a>
                     <div class="add">
